[package]
name = "mysql_async_support_rt"
version = "0.3.0"
authors = ["Azriel Hoh <azriel91@gmail.com>"]
description = "Supporting types for interacting with mysql databases."
edition = "2018"
repository = "https://github.com/azriel91/mysql_async_support"
documentation = "https://docs.rs/mysql_async_support_rt"
readme = "../../README.md"
keywords = ["mysql", "ssh", "async"]
license = "MIT OR Apache-2.0"

[dependencies]
futures = "0.3.15"
mysql_async = "0.27.1"
mysql_async_support_model = { version = "0.3.0", path = "../mysql_async_support_model" }
ssh_jumper = "0.2.0"
